# asdcplib

./: CMakeLists.txt  README.cmake.md  README.conan.md  conanfile.py
.github/workflows/: main.yml
src/: AS_02.h  AS_02_MGASADM.cpp  AS_02_MGASADM.h  AS_02_PCM.cpp  AS_02_ProRes.cpp  AS_DCP.h  AS_DCP_MXF.cpp  CMakeLists.txt  KM_fileio.h  MDD.cpp  MDD.h  Metadata.cpp  Metadata.h  h__02_Reader.cpp
